@@ -17,6 +17,8 @@ Interface changes
 Fixed bugs
 ----------
 - fixing vector bound checks which failed if compiled with -D_GLIBCXX_ASSERTIONS (Fedora/ArchLinux)
+- SingletonRow: consider case if remaining coefficient is close to zero -> could lead to false variable fixings
+- increase Priority of FixContinuous to detect numerical difficulties earlier
 
 Miscellaneous
 -------------
